# radiate.legacy

./: Cargo.toml  README.md  asdf.json
examples/helloworld/: Cargo.toml
examples/helloworld/src/: main.rs
examples/ism/: Cargo.toml
examples/ism/src/: main.rs
examples/lstm-neat/: Cargo.toml
examples/lstm-neat/src/: main.rs
examples/neat-web/neat-client/: Cargo.toml
examples/neat-web/neat-client/src/: main.rs
examples/neat-web/neat-server/: Cargo.toml
examples/neat-web/neat-server/src/: simulation.rs
examples/xor-evtree/: Cargo.toml
examples/xor-evtree/src/: main.rs
examples/xor-neat/: Cargo.toml
examples/xor-neat-backprop/: Cargo.toml
examples/xor-neat-backprop/src/: main.rs
examples/xor-neat/src/: main.rs
radiate/: Cargo.toml
radiate/src/engine/: generation.rs  mod.rs  niche.rs
radiate/src/models/neat/: edge.rs  neat.rs
radiate_legacy/: Cargo.toml
radiate_legacy/src/: lib.rs  prelude.rs
radiate_legacy/src/engine/: genocide.rs  population.rs
radiate_legacy/src/models/neat/: mod.rs  neatenv.rs
radiate_legacy_matrix_tree/: Cargo.toml
radiate_legacy_web/: Cargo.toml  README.md
radiate_legacy_web/src/web/dtos/: populationdto.rs  radiatedto.rs
