[package]
name = "xor-neat"
description = "XOR for the neat algorithm."
version = "1.0.0"
authors = ["pkalivas <peterkalivas@gmail.com>"]

[dependencies]
radiate_legacy={path= "../../radiate_legacy" }
radiate_legacy_web={path= "../../radiate_legacy_web" }
serde = {version ="1.0", features = ["rc"]}
serde_json="1.0.44"
serde_derive="1.0.104"
